--- a/06-Probability_Intro.slides.html
+++ b/06-Probability_Intro.slides.html
@@ -15220,7 +15220,7 @@ div.jp-OutputPrompt {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Examples">Examples<a class="anchor-link" href="#Examples">&#182;</a></h1><ol>
-<li><p>An experiment consists of flipping two fair coins. Here $$S=\{HH, HT, TH, TT\}.$$ An example of an event in this sample space could be $$A=\{\text{at least one tails}\}=\{HT,TH\}.$$</p>
+<li><p>An experiment consists of flipping two fair coins. Here $$S=\{HH, HT, TH, TT\}.$$ An example of an event in this sample space could be $$A=\{\text{exactly one tails}\}=\{HT,TH\}.$$</p>
 </li>
 <li><p>An experiment consists of rolling a fair 6-sided die. Here $$S=\{1,2,3,4,5,6\}.$$ An example of an event in this sample space could be $$A=\{\text{even numbers}\geq 4\}=\{4,6\}.$$</p>
 </li>
