--- a/15-Continuous_Rand_Var_and_Normal_Data.slides.html
+++ b/15-Continuous_Rand_Var_and_Normal_Data.slides.html
@@ -15247,7 +15247,7 @@ div.jp-OutputPrompt {
 <li>Compute $P\{2.3\leq X\leq 4.4\}$.</li>
 </ol>
 </li>
-<li><p>Let $X$ be assocated with the pdf $$p_X(x)=\begin{cases} x\text{ if $0\leq x\leq 2$}\\ 4-x\text{ if $2\leq x\leq 4$}\\0\text{ otherwise}\end{cases}.$$</p>
+<li><p>Let $X$ be assocated with the pdf $$p_X(x)=\begin{cases} \frac{x}{4}\text{ if $0\leq x\leq 2$}\\ 1-\frac{x}{4}\text{ if $2\leq x\leq 4$}\\0\text{ otherwise}\end{cases}.$$</p>
 <ol>
 <li>Verify that this is a pdf. (Hint: Sketch the function.)</li>
 <li>Compute $P\{X\geq 2\}$.</li>
@@ -15262,38 +15262,13 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div></section><section >
-<div id="cell-id=383dcdd5" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="More-Examples">More Examples<a class="anchor-link" href="#More-Examples">&#182;</a></h2><ol start="3">
-<li><p>Let $X$ be assocated with the pdf $$p_X(x)=\begin{cases} \frac{1}{5}\text{ if $2\leq x\leq 7$}\\ 0\text{ otherwise}\end{cases}.$$</p>
-<ol>
-<li>Verify that this is a pdf.</li>
-<li>Compute $P\{2.3\leq X\leq 4.4\}$.</li>
-</ol>
-</li>
-<li><p>Let $X$ be assocated with the pdf $$p_X(x)=\begin{cases} \frac{1}{5}\text{ if $2\leq x\leq 7$}\\ 0\text{ otherwise}\end{cases}.$$</p>
-<ol>
-<li>Verify that this is a pdf.</li>
-<li>Compute $P\{2.3\leq X\leq 4.4\}$.</li>
-</ol>
-</li>
-</ol>
-
-</div>
-</div>
-</div>
-</div></section><section >
 <div id="cell-id=fb43ff2f" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Even-More-Examples">Even More Examples<a class="anchor-link" href="#Even-More-Examples">&#182;</a></h2><ol start="5">
+<h2 id="More-Examples">More Examples<a class="anchor-link" href="#More-Examples">&#182;</a></h2><ol start="5">
 <li>Suppose that the number of minutes of playing time of a certain college basketball player in a randomly chosen game has the following density function.</li>
 </ol>
 <p><img src="pdf_15.png" alt="pdf" /></p>
