--- a/21-Interval_Estimators.slides.html
+++ b/21-Interval_Estimators.slides.html
@@ -15404,7 +15404,7 @@ $$<p>We say that $\overline{X}\pm1.96\frac{\sigma}{\sqrt{n}}$ is a <strong>95 pe
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="Interval-estimators-of-the-mean-of-a-normal-population-with-unknown-variance">Interval estimators of the mean of a normal population with unknown variance<a class="anchor-link" href="#Interval-estimators-of-the-mean-of-a-normal-population-with-unknown-variance">&#182;</a></h2><p>Let $X_1, X_2, \dots, X_n$ be a sample of size $n$ from a population with <em>unknown</em> mean $\mu$ and <em>unknown</em> standard deviation $\sigma$.</p>
-<p>If we estimate $\sigma$ by the sample standard deviation $S$ where $$S^2 = \frac{1}{n-1}\sum_{i=1}^n(X_i-\overline{X})^2,$$ then we get that $$T_{n-1} = \frac{\overline{X}-\mu}{S/\sqrt{n}},$$ where $T_{n-1}$ is a distribution known as the <strong>Student's t-distribution</strong> with $n-1$ degrees of freedom.</p>
+<p>If we estimate $\sigma$ by the sample standard deviation $S$ where $$S^2 = \frac{1}{n-1}\sum_{i=1}^n(X_i-\overline{X})^2,$$ then we get that $$T_{n-1} = \frac{\overline{X}-\mu}{S/\sqrt{n}},$$ where $T_{n-1}$ is a random variable with a distribution known as the <strong>Student's t-distribution</strong> with $n-1$ degrees of freedom.</p>
 
 </div>
 </div>
