--- a/22-Hypothesis_Testing.slides.html
+++ b/22-Hypothesis_Testing.slides.html
@@ -15362,20 +15362,20 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div>
-</div>
+</div></section><section >
 <div id="cell-id=85edc9da" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Problem-1">Problem 1<a class="anchor-link" href="#Problem-1">&#182;</a></h2><p>We begin with our assumptions:  $$H_0: \mu = 13,500$$ and $$H_1: \mu \neq 13,500.$$</p>
+<p>We begin with our assumptions:  $$H_0: \mu = 13,500$$ and $$H_1: \mu \neq 13,500.$$</p>
 <p>We can obtain the p value by computing: $$P\bigg\{|Z|\geq \frac{\sqrt{36}}{4,000}|15,233-13,500|\bigg\}.$$</p>
 
 </div>
 </div>
 </div>
-</div><div id="cell-id=f7cb9cdc" class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
+</div><div class="fragment" ><div id="cell-id=f7cb9cdc" class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -15418,7 +15418,7 @@ div.jp-OutputPrompt {
 
 </div>
 
-</div>
+</div></div><div class="fragment" >
 <div id="cell-id=7b7edf4c" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -15449,18 +15449,7 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div>
-</div>
-<div id="cell-id=9a03541a" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Problem-2">Problem 2<a class="anchor-link" href="#Problem-2">&#182;</a></h2>
-</div>
-</div>
-</div>
-</div><div id="cell-id=5e367c79" class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
+</div></div></section><section ><div id="cell-id=5e367c79" class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -15505,7 +15494,7 @@ p value when sd is 15: 0.3173
 
 </div>
 
-</div>
+</div><div class="fragment" >
 <div id="cell-id=a3909dd0" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -15517,7 +15506,7 @@ p value when sd is 15: 0.3173
 </div>
 </div>
 </div>
-</div></section><section >
+</div></div></section><section >
 <div id="cell-id=9f801b81" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -15538,7 +15527,7 @@ p value when sd is 15: 0.3173
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Problem-3">Problem 3<a class="anchor-link" href="#Problem-3">&#182;</a></h2><p>We begin with our assumptions:  $$H_0: \mu &gt; 3$$ and $$H_1: \mu \leq 3.$$</p>
+<p>We begin with our assumptions:  $$H_0: \mu &gt; 3$$ and $$H_1: \mu \leq 3.$$</p>
 
 </div>
 </div>
