--- a/23-More_Hypothesis_Testing.slides.html
+++ b/23-More_Hypothesis_Testing.slides.html
@@ -15261,7 +15261,7 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Problem-1">Problem 1<a class="anchor-link" href="#Problem-1">&#182;</a></h2><p>We let $$H_0: \mu = 20.0$$ and $$H_1: \mu\neq 20.0.$$ We reject the null hypothesis if $\frac{\sqrt{25}}{1.3}|19.7-20.0|\geq t_{24,0.025}.$</p>
+<p>We let $$H_0: \mu = 20.0$$ and $$H_1: \mu\neq 20.0.$$ We reject the null hypothesis if $\frac{\sqrt{25}}{1.3}|19.7-20.0|\geq t_{24,0.025}.$</p>
 
 </div>
 </div>
@@ -15333,7 +15333,7 @@ T-value: 2.0639
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Problem-2">Problem 2<a class="anchor-link" href="#Problem-2">&#182;</a></h2><p>We let $$H_0: \mu \geq 400$$ and $$H_1: \mu&lt; 400.$$</p>
+<p>We let $$H_0: \mu \geq 400$$ and $$H_1: \mu&lt; 400.$$</p>
 
 </div>
 </div>
@@ -15407,7 +15407,7 @@ T-value: 2.0639
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Problem-3">Problem 3<a class="anchor-link" href="#Problem-3">&#182;</a></h2><p>We let $$H_0: \mu \geq 31$$ and $$H_1: \mu&lt; 31.$$ Given a value of $\alpha,$ we reject the null hypothesis if $\frac{\sqrt{8}}{S}(\overline{X}-31)\leq -t_{7,\alpha}.$</p>
+<p>We let $$H_0: \mu \geq 31$$ and $$H_1: \mu&lt; 31.$$ Given a value of $\alpha,$ we reject the null hypothesis if $\frac{\sqrt{8}}{S}(\overline{X}-31)\leq -t_{7,\alpha}.$</p>
 
 </div>
 </div>
