--- a/22-Hypothesis_Testing.slides.html
+++ b/22-Hypothesis_Testing.slides.html
@@ -15430,7 +15430,7 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div>
-</div>
+</div></div></section><section >
 <div id="cell-id=ec353442" class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -15449,7 +15449,7 @@ div.jp-OutputPrompt {
 </div>
 </div>
 </div>
-</div></div></section><section ><div id="cell-id=5e367c79" class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
+</div></section><section ><div id="cell-id=5e367c79" class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
