--- a/25-Chi-Squared-Independence.slides.html
+++ b/25-Chi-Squared-Independence.slides.html
@@ -15406,7 +15406,7 @@ The 95th percentile: 9.4877
 <table>
 <thead>
 <tr>
-  <th></th>
+  <th>Gender</th>
   <th>Democrat</th>
   <th>Republican</th>
   <th>Independent</th>
@@ -15516,7 +15516,7 @@ The 95th percentile: 5.9915
 <table>
 <thead>
 <tr>
-  <th></th>
+  <th>Depressive State</th>
   <th>Married</th>
   <th>Single</th>
   <th>Widowed or Divorced</th>
